--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -227,3 +227,19 @@ Mechanic.",
   year      = "1982",
   publisher = "McGraw-Hill Science Engineering",
   }
+  
+@article{nozzle_exact,
+  title   = "Liquid and liquid-gas flows at all speeds: Reference solutions and numerical schemes.",
+  author  = "S LeMartelot and B Nkonga and R Saurel",
+  journal = "Rsearch report",
+  volume  = "7935",
+  #pages   = "97–109",
+  year    = "2012",
+  }
+
+@book{convergence_book,
+  title   = "Constructive Approximation",
+  author = "R A DeVore and G G Lorentz",
+  year      = "1991",
+  publisher = "Springer-Verlag",
+  }
