--- a/low_mach.tex
+++ b/low_mach.tex
@@ -908,6 +908,13 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \end{center}
 \nonumber
 \end{table}
+In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted (log-log plot) as a function of the far field Mach number. The pressure and velocity fluctuations are expected to be function of the Mach number square and the Mach number, respectively. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients lead the correct convergence order in the low Mach limit. 
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{pressure_fluctuation.png}
+\caption{Log-log plot of the pressure and velocity fluctuations as a function of the far field Mach number.}
+\label{fig:pressure_vel_fluc}
+\end{figure}
 %---------------------------------------------------------------------------------------------------
 \subsection{Subsonic flow over a $2$-D hump} \label{sec:hump}
 %---------------------------------------------------------------------------------------------------
