update: plot with pressure and velocity fluctuations

--- a/low_mach.tex
+++ b/low_mach.tex
@@ -908,7 +908,7 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \end{center}
 \nonumber
 \end{table}
-In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted (log-log plot) as a function of the far field Mach number. The pressure and velocity fluctuations are expected to be function of the Mach number square and the Mach number, respectively. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients lead the correct convergence order in the low Mach limit. 
+In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the far field Mach number, on a log-log plot. The pressure and velocity fluctuations are expected to be of the order of the Mach number square and the Mach number, respectively. It ss known that some stabilization methods, alike upwind scheme \cite{guillard}, can produce pressure fluctuations with the wrong order. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients yields the correct order in the low Mach limit for both the pressure and velocity variables. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted.  
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{pressure_fluctuation.png}
