--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -231,7 +231,7 @@ Mechanic.",
 @article{nozzle_exact,
   title   = "Liquid and liquid-gas flows at all speeds: Reference solutions and numerical schemes.",
   author  = "S LeMartelot and B Nkonga and R Saurel",
-  journal = "Rsearch report",
+  journal = "Research report",
   volume  = "7935",
   #pages   = "97–109",
   year    = "2012",
@@ -242,4 +242,13 @@ Mechanic.",
   author = "R A DeVore and G G Lorentz",
   year      = "1991",
   publisher = "Springer-Verlag",
+  }
+    
+@article{guillard,
+  title   = "On the behaviour of upwind schemes in the low Mach number limit",
+  author  = "H Guillard and C Viozat",
+  journal = "Comput. Fluids",
+  volume  = "105",
+  pages   = "207-233",
+  year    = "1993",
   }
