change the text in liquid section to match the plots

--- a/low_mach.tex
+++ b/low_mach.tex
@@ -532,7 +532,9 @@ Plots of the velocity, density and pressure are given at steady-state in \fig{fi
         \end{subfigure}
         \caption{Steady-state solution for liquid phase in a $1$-D convergent-divergent nozzle with an uniform mesh of $50$ cells.}\label{fig:1d_liq_nozzle}
 \end{figure}
-The numerical and exact solutions of the velocity, pressure and density given in \fig{fig:1d_liq_nozzle} for a fairly coarse mesh ($50$ cells) perfectly overlap: it is noted that the numerical solution is symmetric with respect to the nozzle throat located in $x=0.5m$. The second-order viscosity coefficient  is very small compare to the first-order one as expected: (i) the numerical solution is smooth as shown in \fig{fig:1d_nozzle_liq_visc} and (ii) the flow is in a low Mach regime and thus isentropic . A convergence study was performed using the exact solution as a reference: the L$1$ and L$2$ norms of the error and the corresponding convergence rates are computed at steady-state on various uniform mesh from $4$ to $256$ cells. The results for linear polynomials $\mathbb{Q}_1$ are reported in \tbl{tbl:l1_norm_liq} and \tbl{tbl:l2_norm_liq} for the primitive variables: density, velocity and pressure.
+In \fig{fig:1d_liq_nozzle}, the numerical solutions of the pressure, velocity and density obtained with the first-order viscosity (FOV) and the entropy viscosity method (EVM) are plotted against the exact solution. A fairly coarse mesh ($50$ cells) was used. The numerical solution obtained with the EVM and the exact solution perfectly overlap.
+On the other hand, the numerical solution run with the FOV does not give the correct steady-state: this is an illustration of the effect of ill-scaled dissipative terms. 
+It is also noted that the second-order viscosity coefficient  is very small compare to the first-order one as expected (\fig{fig:1d_nozzle_liq_visc}): (i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a low Mach regime and thus isentropic . A convergence study was performed using the exact solution as a reference: the L$1$ and L$2$ norms of the error and the corresponding convergence rates are computed at steady-state on various uniform mesh from $4$ to $256$ cells. The results for linear polynomials $\mathbb{Q}_1$ are reported in \tbl{tbl:l1_norm_liq} and \tbl{tbl:l2_norm_liq} for the primitive variables: density, velocity and pressure.
 \begin{table}[H]
 \begin{center}
  \caption{\label{tbl:l1_norm_liq} L$1$ norm of the error for the liquid phase in a $1$-D convergent-divergent nozzle at steady-state.}
